NearByCustomersActivity - Only showing VisitNearByCustomer Button for Visits for The Day flow adn Navigating to Loan Collection List else Hide VisitNearByCustomer button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,6 +379,7 @@
     <string name="invalid_userID_contact_admin">Invalid UserID \nPlease Contact Admin</string>
     <string name="user_already_registered">User is Already Registered</string>
     <string name="already_registered">Already Registered</string>
+    <string name="near_by_customers">Near By Customers</string>
 
 
     <!--for Tenure-->
