--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -380,6 +380,8 @@
     <string name="user_already_registered">User is Already Registered</string>
     <string name="already_registered">Already Registered</string>
     <string name="near_by_customers">Near By Customers</string>
+    <string name="distance_in_km">Distance in Km:</string>
+    <string name="address_">Address:</string>
 
 
     <!--for Tenure-->
