--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -394,6 +394,7 @@
     <string name="cheque_number_be_six_digit">Cheque No. must be 6 digit</string>
     <string name="ifsc_code_be_eleven_digit">IFSC code  must be 11 digit</string>
     <string name="navigate">Navigate</string>
+    <string name="kindly_install_google_maps">Kindly install GoogleMaps</string>
 
 
     <!--for Tenure-->
