--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -397,6 +397,7 @@
     <string name="kindly_install_google_maps">Kindly install GoogleMaps</string>
     <string name="start_visit">Start Visit</string>
     <string name="stop_visit">\u00A0Stop Visit\u00A0</string>
+    <string name="notes">Notes: </string>
 
 
     <!--for Tenure-->
