NotSpokeToCustomerActivity - on Physical Visit Required button click -> ScheduleVisitForCollectionActivity on Update Schedule button click -> Calling Api with flow=DNSTC-PVR

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -398,6 +398,7 @@
     <string name="start_visit">Start Visit</string>
     <string name="stop_visit">\u00A0Stop Visit\u00A0</string>
     <string name="notes">Notes: </string>
+    <string name="physical_visit_required">Physical Visit Required</string>
 
 
     <!--for Tenure-->
