--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,7 +195,9 @@
     <string name="customer_history">Customer History</string>
     <string name="close">Close</string>
     <string name="no_response_busy">No Response/ \nBusy</string>
+    <string name="no_response_busy_">No Response/Busy</string>
     <string name="not_reachable_switched_off">Not Reachable/ \nSwitched Off</string>
+    <string name="not_reachable_switched_off_">Not Reachable/Switched Off</string>
     <string name="number_is_invalid">Number Is \nInvalid</string>
     <string name="number_is_invalid_">Number Is Invalid</string>
     <string name="spoke_to_friend_family_member">Spoke To Friend/ \nFamily Member</string>
