--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -401,6 +401,7 @@
     <string name="stop_visit">\u00A0Stop Visit\u00A0</string>
     <string name="notes">Notes: </string>
     <string name="physical_visit_required">Physical Visit Required</string>
+    <string name="reason_for_visit">Reason For Visit</string>
 
 
     <!--for Tenure-->
