--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -402,6 +402,7 @@
     <string name="notes">Notes: </string>
     <string name="physical_visit_required">Physical Visit Required</string>
     <string name="reason_for_visit">Reason For Visit</string>
+    <string name="select_no_to_call">Select No to Call.</string>
 
 
     <!--for Tenure-->
