--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -404,8 +404,8 @@
     <string name="reason_for_visit">Reason For Visit</string>
     <string name="select_no_to_call">Select No. to Call</string>
     <string name="complete">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Complete\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
-    <string name="schedule_a_call">Schedule a Call</string>
-    <string name="schedule_a_visit">Schedule a Visit</string>
+    <string name="schedule_a_call">Schedule A Call</string>
+    <string name="schedule_a_visit">Schedule A Visit</string>
 
 
     <!--for Tenure-->
