--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -373,7 +373,7 @@
     <string name="will_pay_later_status_info">Will Pay Later</string>
     <string name="full_amount_paid_status_info">Full Amount Paid</string>
     <string name="partial_Amount_paid_status_info">Partial Amount Paid</string>
-    <string name="will_pay_lump_sump_status_info">Will Pay Lump sum</string>
+    <string name="will_pay_lump_sump_status_info">Will Pay Lump Sum</string>
     <string name="please_select_from_date">Please Select From Date</string>
     <string name="please_select_to_date">Please Select To Date</string>
     <string name="mpin_is_incorrect">MPin is Incorrect</string>
