--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,6 +210,7 @@
     <string name="no_the_lead_nis_not_interested">No the lead \nis not interested</string>
     <string name="which_products_are_you_interested_in">Which products are you interested in?</string>
     <string name="will_pay_lumpsum">\u00A0Will pay LumpSum\u00A0</string>
+    <string name="will_pay_lumpsum_">Will pay LumpSum</string>
     <string name="already_paid">Already Paid</string>
     <string name="upload">Upload</string>
     <string name="upload_file">Upload File</string>
