--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -419,6 +419,7 @@
     <string name="select_reason">Select Reason</string>
     <string name="do_you_want_to_close_this_acc_permanently">Do you want to close \nthis account permanently?</string>
     <string name="getting_device_location">Getting Device Location</string>
+    <string name="pls_turn_on_location">Please Turn ON Device Location  </string>
     <string name="unable_to_get_device_location">Unable to get device location</string>
 
 
